# IMDB_DataProvider

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
docker/: create-volume-dirs.sh  entrypoint.sh
examples/cron/: imdb-ingest.cron
examples/systemd/: imdb-ingest.service  imdb-ingest.timer
imdb_service/: __init__.py  __main__.py  api.py  cache.py  config.py  db.py  ingest.py  models.py  scheduler.py  utils.py  versioning.py
postman/: IMDb_Data_Provider.postman_collection.json
