[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imdb-service"
version = "1.0.0"
description = "High-performance local API over IMDb non-commercial datasets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=0.9.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "cachetools>=5.3.0",
    "httpx>=0.25.0",
    "loguru>=0.7.0",
    "pyarrow>=14.0.0",
    "apscheduler>=3.10.0",
    "filelock>=3.12.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]

[project.scripts]
imdb-ingest = "imdb_service.ingest:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["imdb_service*"]
